@@ -1,2 +1,4 @@
 # javademo
 This is some small test for java
+
+-Xmx128M -Xms64M -XX:+PrintGCDetails
